Fixed button not showing properly on forms

--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -29,6 +29,7 @@ input {
   top: 50%;
   transform: translateY(-50%);
   
+  
   margin: 0 auto;
   
   background-color: white;
@@ -43,7 +44,7 @@ input {
     color: white;
     font-size: 20px;
   }
-  form {  padding: 10px 20px 20px 20px; }
+  form {  padding: 10px 20px 20px 20px; overflow: auto;}
 }
 
 .text_input {
@@ -152,8 +153,7 @@ input {
 }
 
 .raised {
-  position: absolute;
-  right: 22px;
+  float: right;
   padding: 6px;
   min-width: 56px;
   border-radius: 2px;
